--- a/index.html
+++ b/index.html
@@ -4,17 +4,45 @@
 	<title>My Page</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="css/jquery.mobile-1.1.0.min.css" />
+	<link rel="stylesheet" href="css/sweettweet.css" />
 	<script src="lib/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript">
+        // this adds default back button on every page
+        $(document).bind("mobileinit", function(){
+            $.mobile.page.prototype.options.addBackBtn= true;
+        });
+
+    </script>
 	<script src="lib/jquery.mobile-1.1.0.min.js"></script>
 </head> 
 <body> 
-<div data-role="page">
-	<div data-role="header">
-		<h1>My Title</h1>
-	</div>
+<div data-role="page" id="tweets-list">
+	<header data-role="header">
+		<h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
+		<a href="#" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
+	</header>
 
 	<div data-role="content">	
-		<p>Hello world</p>		
+		<ul data-role="listview">
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+			<li><a href="#tweet-detail">My first tweet</a></li>
+		</ul>		
+	</div>
+</div>
+<div data-role="page" id="tweet-detail">
+	<header data-role="header">
+		<h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
+		<a href="#" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
+	</header>
+	<div data-role="content">
+		my tweet !
 	</div>
 </div>
 </body>
