Added popup for filter tweets

--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@
 
     </script>
 	<script src="lib/jquery.mobile-1.1.0.min.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#filter-button').click(function (event) {
+        event.preventDefault();
+        $('#filter-popup').show();
+      });
+    });
+  </script>
 </head> 
 <body> 
 <div data-role="page" id="tweets-list">
 	<header data-role="header">
 		<h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
-		<a href="#filter" data-role="button"  data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
+		<a id="filter-button" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
 	</header>
 
 	<div data-role="content">	
-		<ul data-role="listview">
+		<ul data-role="listview" >
 			<li><a href="#tweet-detail">My first tweet</a></li>
 			<li><a href="#tweet-detail">My first tweet</a></li>
 			<li><a href="#tweet-detail">My first tweet</a></li>
@@ -35,22 +44,15 @@
 			<li><a href="#tweet-detail">My first tweet</a></li>
 		</ul>		
 	</div>
-</div>
-<div id="filter" data-role="dialog">
-	<header data-role="header">
-		<h1>filters</h1>
-	</header>
-	<div data-role="content">
-		<ul data-role="listview">
-			<li><a href="#tweet-detail">Node.js</a></li>
-			<li><a href="#tweet-detail">Zepto</a></li>
-			<li><a href="#tweet-detail">Backbone</a></li>
-			<li><a href="#tweet-detail">Ember</a></li>
-		</ul>
-	</div>
-	<footer data-role="footer">
-
-	</footer>
+  <div id="filter-popup">
+    <div class="arrow"></div>
+    <ul data-role="listview" data-filter="true" >
+      <li>Node.js</li>
+      <li>Ember</li>
+      <li>Backbone</li>
+      <li>JQuery Mobile</li>
+    </ul>
+  </div>
 </div>
 <div data-role="page" id="tweet-detail">
 	<header data-role="header">
