--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html> 
 <html> 
-	<head> 
-	<title>My Page</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="css/jquery.mobile-1.1.0.min.css" />
-	<link rel="stylesheet" href="css/sweettweet.css" />
-	<script src="lib/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript">
+  <head> 
+  <title>My Page</title> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <link rel="stylesheet" href="css/jquery.mobile-1.1.0.min.css" />
+  <link rel="stylesheet" href="css/sweettweet.css" />
+  <script src="lib/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript">
         // this adds default back button on every page
         $(document).bind("mobileinit", function(){
             $.mobile.page.prototype.options.addBackBtn= true;
         });
-
     </script>
-	<script src="lib/jquery.mobile-1.1.0.min.js"></script>
+  <script src="lib/jquery.mobile-1.1.0.min.js"></script>
+  <script src="js/init.js"></script>
 
   <script>
     $(document).ready(function () {
-      $('#filter-button').click(function (event) {
-        event.preventDefault();
-        $('#filter-popup').show();
-      });
+      $().initPage();
     });
   </script>
 </head> 
 <body> 
 <div data-role="page" id="tweets-list">
-	<header data-role="header">
-		<h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
-		<a id="filter-button" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
-	</header>
+  <header data-role="header">
+    <h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
+    <a id="filter-button" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
+  </header>
 
-	<div data-role="content">	
-		<ul data-role="listview" >
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-			<li><a href="#tweet-detail">My first tweet</a></li>
-		</ul>		
-	</div>
+  <div data-role="content"> 
+    <ul data-role="listview" >
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+      <li><a href="#tweet-detail">My first tweet</a></li>
+    </ul>   
+  </div>
   <div id="filter-popup">
     <div class="arrow"></div>
     <ul data-role="listview" data-filter="true" >
@@ -55,13 +52,13 @@
   </div>
 </div>
 <div data-role="page" id="tweet-detail">
-	<header data-role="header">
-		<h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
-		<a href="#" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
-	</header>
-	<div data-role="content">
-		my tweet !
-	</div>
+  <header data-role="header">
+    <h1><img src="images/twitter_normal.gif" />jsgeneve</h1>
+    <a href="#" data-role="button" data-icon="search" class='ui-btn-right' data-iconpos="right">Filter</a>
+  </header>
+  <div data-role="content">
+    my tweet !
+  </div>
 </div>
 </body>
 </html>
